# doctor

./: LICENSE  README.md  pyproject.toml
src/: common.py  comparison.py  embeddings.py  exclusions.py  files_exclusions.py  paralents.py  project.py  validation.py
src/ast/: javascript.py  python.py
src/core/: project.py  report.py
src/helpers/: comparison.py  embeddings.py  exclusions.py  languages.py  readme.py
src/languages/: abstract.py
src/languages/classes/: javascript.py  python.py
src/ucases/: common.py  endpoints.py  parallents.py  validation.py
tests/ucases/: test_common.py  test_endpoints.py  test_parallents.py  test_validation.py
